Validaciones de edit product

--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -62,9 +62,9 @@
                     name="oldFoto" 
                     value="<%= locals.oldData ? oldData.foto : '0' %>"
                 >
-                <% if (locals.errors && errors.foto) { %>
+                <% if (locals.errors && errors.foto1) { %>
                     <div class="text-danger">
-                        <%= errors.foto.msg %>
+                        <%= errors.foto1.msg %>
                     </div>
                 <% } %>
             </div>
