--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -39,7 +39,7 @@
             </div>
             <div class="campo">
                 <label for="description">Descripción</label>
-                <textarea name="description" id="description" cols="100" rows="2"></textarea>
+                <input name="description" id="description" >
                 <div class="text-danger"></div>
                 <% if (locals.errors && errors.description) { %>
                     <div class="text-danger">
@@ -52,8 +52,8 @@
                 <label for="foto">Imagen 1</label>
                 <input 
                     type="file" 
-                    name="foto"
-                    id="foto"
+                    name="foto1"
+                    id="foto1"
                     value="<%= locals.oldData ? oldData.foto : '0' %>"
                 >
                 <div class="text-danger"></div>
