Validación de front de destination y category

--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -30,7 +30,7 @@
                         </option>
                     <% }) %>
                 </select>
-
+                <div class="text-danger"></div>
                 <% if (locals.errors && errors.categ) { %>
                     <div class="text-danger">
                         <%= errors.categ.msg %>
@@ -179,6 +179,7 @@
                         </option>
                     <% }) %>
                 </select>
+                <div class="text-danger"></div>
 
                 <% if (locals.errors && errors.destination) { %>
                     <div class="text-danger">
