--- a/src/views/products/editProperty.ejs
+++ b/src/views/products/editProperty.ejs
@@ -26,7 +26,7 @@
                                 </option>
                                 <% }) %>
                         </select>
-
+                        <div class="text-danger"></div>
                         <% if (locals.errors && errors.categ) { %>
                             <div class="text-danger">
                                 <%= errors.categ.msg %>
